create local storage logic

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    
     <form id="formElement">
       <input type="text" name="name" placeholder="Name of Item">
-      <input type="text" name="date" placeholder="MM/DD/YYYY">
+      <input type="text" name="date" placeholder="MM-DD-YYYY">
       <input type="submit" onclick="">
     </form>
     <div id="items_table">
