--- a/index.html
+++ b/index.html
@@ -7,29 +7,26 @@
     <meta charset="utf-8" />
 
   </head>
-  <body onload="">
+  <body onload="doShowAll()">
    
     <form id="formElement">
       <input type="text" name="name" placeholder="Name of Item">
       <input type="text" name="date" placeholder="MM-DD-YYYY">
-      <input type="submit" onclick="">
+      <input type="submit" onclick="setLineItem()">
     </form>
     <div id="items_table">
       <h2>Items</h2>
       <table id="pairs">
         <tbody>
-          <tr>
-            <th>Name of Line</th>
-            <th>Days Since</th>
-          </tr>
+          <tr><th>Name</th><th>Days Since</th></tr>
         </tbody>
       </table>
       <p>
         <label>
-          <input type="button" onclick="">
+          <input type="button" value="Clear Storage" onclick="clearStorage()">
         </label>
       </p>
     </div>
-    <script src="sketch.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
