--- a/index.html
+++ b/index.html
@@ -8,25 +8,36 @@
 
   </head>
   <body onload="doShowAll()">
-   <div id="formFormat">
-      <form id="formElement">
-        <input type="text" name="name" placeholder="Name of Item">
-        <input type="text" name="date" placeholder="MM-DD-YYYY">
-        <input type="submit" onclick="setLineItem()">
-      </form>
-    </div>
-    <div id="items_table">
-      <h2>Items</h2>
-      <table id="pairs">
-        <tbody>
-          <tr><th>Name</th><th>Days Since</th></tr>
-        </tbody>
-      </table>
-      <p>
-        <label>
-          <input type="button" value="Clear Storage" onclick="clearStorage()">
-        </label>
-      </p>
+    <div class="row">
+      <div class="column">
+        <div id="items_table">
+          <h2>When was the Last Time You...</h2>
+          
+          <table id="pairs">
+            <caption></caption>
+            <tbody>
+              <tr><th>Name</th><th>Days Since</th></tr>
+            </tbody>
+          </table>
+          <p>
+            <label>
+              <input id=clean type="button" value="Clear Table" onclick="clearStorage()">
+            </label>
+          </p>
+        </div>
+        <div id="formFormat">
+          <h3 style="display:inline-block;">Add a new Item?</h3>
+          <form id="formElement">
+            <input type="text" name="name" placeholder="Name of Item">
+            <input type="text" name="date" placeholder="MM-DD-YYYY">
+            <input type="submit" onclick="setLineItem()">
+          </form>
+        </div>
+      </div>
+      <div class="column">
+        <!--Fun little css things-->
+        <h2>Test 1</h2>
+      </div>
     </div>
     <script src="main.js"></script>
   </body>
