confirm clear table popup

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <title>Days Since</title>
-    <script src="p5.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 
   </head>
   <body onload="doShowAll()">
     <div class="row">
+       <!--Left Column-->
       <div class="column">
         <div id="items_table">
           <h2>When was the Last Time You...</h2>
@@ -34,10 +34,9 @@
           </form>
         </div>
       </div>
+      <!--Right Column-->
       <div class="column">
         <!--Fun little css things-->
-        <h2>Test 1</h2>
-      </div>
     </div>
     <script src="main.js"></script>
   </body>
